# Frequalizer

./: .gitignore  .gitmodules  CMakeLists.txt  Frequalizer.jucer  LICENSE.md  README.md  SETUP_CI.md
.github/workflows/: workflow.yml
Builds/MacOSX/: Icon.icns  Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST.plist
Builds/MacOSX/Frequalizer.xcodeproj/: project.pbxproj
Builds/MacOSX/Frequalizer.xcodeproj/project.xcworkspace/xcuserdata/Dobby.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/VisualStudio2015/: Frequalizer.sln  Frequalizer_SharedCode.vcxproj  Frequalizer_SharedCode.vcxproj.filters  Frequalizer_StandalonePlugin.vcxproj  Frequalizer_VST.vcxproj  resources.rc
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h
Resources/: CMakeLists.txt  InnoSetup.iss
Source/: Analyser.h  CMakeLists.txt  FrequalizerEditor.cpp  FrequalizerEditor.h  FrequalizerProcessor.cpp  FrequalizerProcessor.h  LabeledSlider.h  SocialButtons.h
